--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
+
+    <div id="wrap">
+        <div class="calculator">
+            <div class="display"></div>
+            <div class="items">
+                <button class="AC">AC</button>
+                <button class="style-operators" data-type="operator">/</button>
+                <button class="style-numbers" data-type="number">7</button>
+                <button class="style-numbers" data-type="number">8</button>
+                <button class="style-numbers" data-type="number">9</button>
+                <button class="style-operators" data-type="operator">*</button>
+                <button class="style-numbers" data-type="number">4</button>
+                <button class="style-numbers" data-type="number">5</button>
+                <button class="style-numbers" data-type="number">6</button>
+                <button class="style-operators" data-type="operator">-</button>
+                <button class="style-numbers" data-type="number">1</button>
+                <button class="style-numbers" data-type="number">2</button>
+                <button class="style-numbers" data-type="number">3</button>
+                <button class="style-operators" data-type="operator">+</button>
+                <button class="zero style-numbers" data-type="number">0</button>
+                <button class="style-numbers">.</button>
+                <button class="style-operators">=</button>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
