--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
     <div id="wrap">
         <div class="calculator">
-            <div class="display"></div>
+            <div class="display">
+                <div class="disp top"></div>
+                <div class="disp bottom"></div>
+            </div>
             <div class="items">
                 <button class="AC">AC</button>
                 <button class="style-operators" data-type="operator">/</button>
@@ -29,7 +32,7 @@
                 <button class="style-numbers" data-type="number">3</button>
                 <button class="style-operators" data-type="operator">+</button>
                 <button class="zero style-numbers" data-type="number">0</button>
-                <button class="style-numbers">.</button>
+                <button class="style-numbers" data-type="period">.</button>
                 <button class="style-operators">=</button>
             </div>
         </div>
